--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.7.1"
 itertools = "0.9"
 log = "0.4.0"
 serde_json = "1.0"
+num-format = "0.4"
 
 [dependencies.serde]
 version = "1.0"
